--- a/src/main/resources/assets/winterskyblock/lang/en_us.json
+++ b/src/main/resources/assets/winterskyblock/lang/en_us.json
@@ -95,6 +95,9 @@
   "item.winterskyblock.ender_core": "Ender Core",
   "item.winterskyblock.dragon_artifact": "Holy Artifact of the Dragon",
 
+  "item.winterskyblock.snow_crystal": "Snow Crystal",
+  "item.winterskyblock.heated_snow_crystal": "Heated Snow Crystal",
+
   "block.winterskyblock.leaf_press": "Leaf Press",
   "block.winterskyblock.dried_leaves": "Dried Leaves",
   "block.winterskyblock.end_diamond_ore": "End Diamond Ore",
